--- a/files/en-us/learn/css/css_layout/normal_flow/index.html
+++ b/files/en-us/learn/css/css_layout/normal_flow/index.html
@@ -47,7 +47,6 @@ tags:
 
 <p>Let's look at a simple example that explains all of this:</p>
 
-<div id="Normal_Flow">
 <pre class="brush: html">&lt;h1&gt;Basic document flow&lt;/h1&gt;
 
 &lt;p&gt;I am a basic block level element. My adjacent block level elements sit on new lines below me.&lt;/p&gt;
@@ -74,9 +73,8 @@ span {
   background: white;
   border: 1px solid black;
 }</pre>
-</div>
 
-<p>{{ EmbedLiveSample('Normal_Flow', '100%', 500) }}</p>
+<p>{{ EmbedLiveSample('How_are_elements_laid_out_by_default', '100%', 600) }}</p>
 
 <h2 id="Summary">Summary</h2>
 
