--- a/files/en-us/learn/css/css_layout/floats/index.html
+++ b/files/en-us/learn/css/css_layout/floats/index.html
@@ -75,7 +75,21 @@ tags:
   padding: 1em;
 }</pre>
 
-<p>If you save and refresh, you'll see something much like what you'd expect: the box is sitting above the text, in normal flow. To float the text around it, add the {{cssxref("float")}} and {{cssxref("margin-right")}} properties to the <code>.box</code> rule:</p>
+<p>If you save and refresh, you'll see something much like what you'd expect: the box is sitting above the text, in normal flow.</p>
+
+<h3>Floating the box</h3>
+
+<p>To float the box, add the {{cssxref("float")}} and {{cssxref("margin-right")}} properties to the <code>.box</code> rule:</p>
+
+<pre class="brush: html hidden">&lt;h1&gt;Simple float example&lt;/h1&gt;
+
+&lt;div class="box"&gt;Float&lt;/div&gt;
+
+&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus aliquam dolor, eu lacinia lorem placerat vulputate. Duis felis orci, pulvinar id metus ut, rutrum luctus orci. Cras porttitor imperdiet nunc, at ultricies tellus laoreet sit amet. &lt;/p&gt;
+
+&lt;p&gt;Sed auctor cursus massa at porta. Integer ligula ipsum, tristique sit amet orci vel, viverra egestas ligula. Curabitur vehicula tellus neque, ac ornare ex malesuada et. In vitae convallis lacus. Aliquam erat volutpat. Suspendisse ac imperdiet turpis. Aenean finibus sollicitudin eros pharetra congue. Duis ornare egestas augue ut luctus. Proin blandit quam nec lacus varius commodo et a urna. Ut id ornare felis, eget fermentum sapien.&lt;/p&gt;
+
+&lt;p&gt;Nam vulputate diam nec tempor bibendum. Donec luctus augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet dapibus ut, facilisis sed est. Nam id risus quis ante semper consectetur eget aliquam lorem. Vivamus tristique elit dolor, sed pretium metus suscipit vel. Mauris ultricies lectus sed lobortis finibus. Vivamus eu urna eget velit cursus viverra quis vestibulum sem. Aliquam tincidunt eget purus in interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p&gt;</pre>
 
 <pre class="brush: css">.box {
   float: left;
@@ -89,46 +103,13 @@ tags:
 
 <p>Now if you save and refresh you'll see something like the following:</p>
 
-<div id="Float_1">
-<div class="hidden">
-<h6 id="Float_Example_1">Float Example 1</h6>
-
-<pre class="brush: html">&lt;h1&gt;Simple float example&lt;/h1&gt;
-
-&lt;div class="box"&gt;Float&lt;/div&gt;
-
-&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus aliquam dolor, eu lacinia lorem placerat vulputate. &lt;/p&gt;
-
-&lt;p&gt;Duis felis orci, pulvinar id metus ut, rutrum luctus orci. Cras porttitor imperdiet nunc, at ultricies tellus laoreet sit amet. Sed auctor cursus massa at porta. Integer ligula ipsum, tristique sit amet orci vel, viverra egestas ligula. Curabitur vehicula tellus neque, ac ornare ex malesuada et. In vitae convallis lacus. Aliquam erat volutpat. Suspendisse ac imperdiet turpis. Aenean finibus sollicitudin eros pharetra congue. Duis ornare egestas augue ut luctus. Proin blandit quam nec lacus varius commodo et a urna. Ut id ornare felis, eget fermentum sapien.&lt;/p&gt;
-
-&lt;p&gt;Nam vulputate diam nec tempor bibendum. Donec luctus augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet dapibus ut, facilisis sed est. Nam id risus quis ante semper consectetur eget aliquam lorem. Vivamus tristique elit dolor, sed pretium metus suscipit vel. Mauris ultricies lectus sed lobortis finibus. Vivamus eu urna eget velit cursus viverra quis vestibulum sem. Aliquam tincidunt eget purus in interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p&gt;
-</pre>
-
-<pre class="brush: css">body {
-  width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
-  font: .9em/1.2 Arial, Helvetica, sans-serif
-}
-
-.box {
-  float: left;
-  margin-right: 15px;
-  width: 150px;
-  height: 150px;
-  border-radius: 5px;
-  background-color: rgb(207,232,220);
-  padding: 1em;
-}
-</pre>
-</div>
-</div>
-
-<p>{{ EmbedLiveSample('Float_1', '100%', 500) }}</p>
+<p>{{ EmbedLiveSample('Floating_the_box', '100%', 500) }}</p>
 
 <p>Let's think about how the float works. The element with the float set on it (the {{htmlelement("div")}} element in this case) is taken out of the normal layout flow of the document and stuck to the left-hand side of its parent container ({{htmlelement("body")}}, in this case). Any content that would come below the floated element in the normal layout flow will now wrap around it instead, filling up the space to the right-hand side of it as far up as the top of the floated element. There, it will stop.</p>
 
 <p>Floating the content to the right has exactly the same effect, but in reverse: the floated element will stick to the right, and the content will wrap around it to the left. Try changing the float value to <code>right</code> and replace {{cssxref("margin-right")}} with {{cssxref("margin-left")}} in the last ruleset to see what the result is.</p>
+
+<h3>Visualising the float</h3>
 
 <p>While we can add a margin to the float to push the text away, we can't add a margin to the text to move it away from the float. This is because a floated element is taken out of normal flow and the boxes of the following items actually run behind the float. You can see this by making some changes to your example.</p>
 
@@ -143,11 +124,7 @@ tags:
 
 <p>To make the effect easier to see, change the <code>margin-left</code> on your float to <code>margin</code> so you get space all around the float. You'll be able to see the background on the paragraph running right underneath the floated box, as in the example below.</p>
 
-<div id="Float_2">
-<div class="hidden">
-<h6 id="Float_Example_2">Float Example 2</h6>
-
-<pre class="brush: html">&lt;h1&gt;Simple float example&lt;/h1&gt;
+<pre class="brush: html hidden">&lt;h1&gt;Simple float example&lt;/h1&gt;
 
 &lt;div class="box"&gt;Float&lt;/div&gt;
 
@@ -157,7 +134,7 @@ tags:
 
 &lt;p&gt;Nam vulputate diam nec tempor bibendum. Donec luctus augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet dapibus ut, facilisis sed est. Nam id risus quis ante semper consectetur eget aliquam lorem. Vivamus tristique elit dolor, sed pretium metus suscipit vel. Mauris ultricies lectus sed lobortis finibus. Vivamus eu urna eget velit cursus viverra quis vestibulum sem. Aliquam tincidunt eget purus in interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p&gt;    </pre>
 
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   width: 90%;
   max-width: 900px;
   margin: 0 auto;
@@ -180,10 +157,8 @@ tags:
   color: #fff;
 }
 </pre>
-</div>
-</div>
 
-<p>{{ EmbedLiveSample('Float_2', '100%', 500) }}</p>
+<p>{{ EmbedLiveSample('Visualising_the_float', '100%', 500) }}</p>
 
 <p>The <a href="/en-US/docs/Web/CSS/Visual_formatting_model#line_boxes">line boxes</a> of our following element have been shortened so the text runs around the float, but due to the float being removed from normal flow the box around the paragraph still remains full width.</p>
 
@@ -198,11 +173,7 @@ tags:
 }
 </pre>
 
-<div id="Float_3">
-<div class="hidden">
-<h6 id="Float_Example_3">Float Example 3</h6>
-
-<pre class="brush: html">&lt;h1&gt;Simple float example&lt;/h1&gt;
+<pre class="brush: html hidden">&lt;h1&gt;Simple float example&lt;/h1&gt;
 
 &lt;div class="box"&gt;Float&lt;/div&gt;
 
@@ -213,7 +184,7 @@ tags:
 &lt;p&gt;Nam vulputate diam nec tempor bibendum. Donec luctus augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet dapibus ut, facilisis sed est. Nam id risus quis ante semper consectetur eget aliquam lorem. Vivamus tristique elit dolor, sed pretium metus suscipit vel. Mauris ultricies lectus sed lobortis finibus. Vivamus eu urna eget velit cursus viverra quis vestibulum sem. Aliquam tincidunt eget purus in interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p&gt;
     </pre>
 
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   width: 90%;
   max-width: 900px;
   margin: 0 auto;
@@ -240,10 +211,8 @@ tags:
   clear: left;
 }
 </pre>
-</div>
-</div>
 
-<p>{{ EmbedLiveSample('Float_3', '100%', 600) }}</p>
+<p>{{ EmbedLiveSample('Clearing_floats', '100%', 600) }}</p>
 
 <p>You should see that the second paragraph now clears the floated element and no longer comes up alongside it. The <code>clear</code> property accepts the following values:</p>
 
@@ -255,7 +224,11 @@ tags:
 
 <h2 id="Clearing_boxes_wrapped_around_a_float">Clearing boxes wrapped around a float</h2>
 
-<p>You now know how to clear something following a floated element, but let's see what happens if you have a tall float and a short paragraph, with a box wrapped around <em>both</em> elements. Change your document so that the first paragraph and the floated box are jointly wrapped with a {{htmlelement("div")}}, which has a class of <code>wrapper</code>.</p>
+<p>You now know how to clear something following a floated element, but let's see what happens if you have a tall float and a short paragraph, with a box wrapped around <em>both</em> elements.</p>
+
+<h3>The problem</h3>
+
+<p>Change your document so that the first paragraph and the floated box are jointly wrapped with a {{htmlelement("div")}}, which has a class of <code>wrapper</code>.</p>
 
 <pre class="brush: html">&lt;div class="wrapper"&gt;
   &lt;div class="box"&gt;Float&lt;/div&gt;
@@ -274,28 +247,18 @@ tags:
 
 <p>In addition, remove the original <code>.cleared</code> class:</p>
 
-<pre class="brush: css" id="ct-0">.cleared {
+<pre class="brush: css">.cleared {
     clear: left;
 }</pre>
 
 <p>You'll see that, just like in the example where we put a background color on the paragraph, the background color runs behind the float.</p>
 
-<div id="Float_4">
-<div class="hidden">
-<h6 id="Float_Example_4">Float Example 4</h6>
-
-<pre class="brush: html">&lt;h1&gt;Simple float example&lt;/h1&gt;
-&lt;div class="wrapper"&gt;
-  &lt;div class="box"&gt;Float&lt;/div&gt;
-
-  &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus aliquam dolor, eu lacinia lorem placerat vulputate. &lt;/p&gt;
-&lt;/div&gt;
-
+<pre class="brush: html hidden">
 &lt;p class="cleared"&gt;Duis felis orci, pulvinar id metus ut, rutrum luctus orci. Cras porttitor imperdiet nunc, at ultricies tellus laoreet sit amet. Sed auctor cursus massa at porta. Integer ligula ipsum, tristique sit amet orci vel, viverra egestas ligula. Curabitur vehicula tellus neque, ac ornare ex malesuada et. In vitae convallis lacus. Aliquam erat volutpat. Suspendisse ac imperdiet turpis. Aenean finibus sollicitudin eros pharetra congue. Duis ornare egestas augue ut luctus. Proin blandit quam nec lacus varius commodo et a urna. Ut id ornare felis, eget fermentum sapien.&lt;/p&gt;
 
 &lt;p&gt;Nam vulputate diam nec tempor bibendum. Donec luctus augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet dapibus ut, facilisis sed est. Nam id risus quis ante semper consectetur eget aliquam lorem. Vivamus tristique elit dolor, sed pretium metus suscipit vel. Mauris ultricies lectus sed lobortis finibus. Vivamus eu urna eget velit cursus viverra quis vestibulum sem. Aliquam tincidunt eget purus in interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p&gt;    </pre>
 
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   width: 90%;
   max-width: 900px;
   margin: 0 auto;
@@ -318,10 +281,8 @@ tags:
   padding: 1em;
 }
 </pre>
-</div>
-</div>
 
-<p>{{ EmbedLiveSample('Float_4', '100%', 600) }}</p>
+<p>{{ EmbedLiveSample('The_problem', '100%', 600) }}</p>
 
 <p>Once again, this is because the float has been taken out of normal flow. Clearing the following element won't work as it did before. This is a problem if you want the box to wrap jointly around the floated item as well as the text of the first paragraph that wraps around the float, while also having the following content cleared of the box. There are three potential ways to deal with this, two of which work in all browsers — yet are slightly hacky — and a third, newer way that deals with this situation properly.</p>
 
@@ -339,11 +300,7 @@ tags:
 
 <p>Now reload the page and the box should clear. This is essentially the same as if you had added an HTML element such as a <code>&lt;div&gt;</code> below the items and set it to <code>clear: both</code>.</p>
 
-<div id="Float_5">
-<div class="hidden">
-<h6 id="Float_Example_5">Float Example 5</h6>
-
-<pre class="brush: html">&lt;h1&gt;Simple float example&lt;/h1&gt;
+<pre class="brush: html hidden">&lt;h1&gt;Simple float example&lt;/h1&gt;
 &lt;div class="wrapper"&gt;
   &lt;div class="box"&gt;Float&lt;/div&gt;
 
@@ -353,7 +310,7 @@ tags:
 
 &lt;p&gt;Nam vulputate diam nec tempor bibendum. Donec luctus augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet dapibus ut, facilisis sed est. Nam id risus quis ante semper consectetur eget aliquam lorem. Vivamus tristique elit dolor, sed pretium metus suscipit vel. Mauris ultricies lectus sed lobortis finibus. Vivamus eu urna eget velit cursus viverra quis vestibulum sem. Aliquam tincidunt eget purus in interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p&gt;      </pre>
 
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   width: 90%;
   max-width: 900px;
   margin: 0 auto;
@@ -382,10 +339,8 @@ tags:
   display: block;
 }
 </pre>
-</div>
-</div>
 
-<p>{{ EmbedLiveSample('Float_5', '100%', 600) }}</p>
+<p>{{ EmbedLiveSample('The_clearfix_hack', '100%', 600) }}</p>
 
 <h3 id="Using_overflow">Using overflow</h3>
 
@@ -400,11 +355,7 @@ tags:
   overflow: auto;
 }</pre>
 
-<div id="Float_6">
-<div class="hidden">
-<h6 id="Float_Example_6">Float Example 6</h6>
-
-<pre class="brush: html">&lt;h1&gt;Simple float example&lt;/h1&gt;
+<pre class="brush: html hidden">&lt;h1&gt;Simple float example&lt;/h1&gt;
 &lt;div class="wrapper"&gt;
   &lt;div class="box"&gt;Float&lt;/div&gt;
 
@@ -414,7 +365,7 @@ tags:
 
 &lt;p&gt;Nam vulputate diam nec tempor bibendum. Donec luctus augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet dapibus ut, facilisis sed est. Nam id risus quis ante semper consectetur eget aliquam lorem. Vivamus tristique elit dolor, sed pretium metus suscipit vel. Mauris ultricies lectus sed lobortis finibus. Vivamus eu urna eget velit cursus viverra quis vestibulum sem. Aliquam tincidunt eget purus in interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p&gt;    </pre>
 
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   width: 90%;
   max-width: 900px;
   margin: 0 auto;
@@ -438,10 +389,8 @@ tags:
   padding: 1em;
 }
 </pre>
-</div>
-</div>
 
-<p>{{ EmbedLiveSample('Float_6', '100%', 600) }}</p>
+<p>{{ EmbedLiveSample('Using_overflow', '100%', 600) }}</p>
 
 <p>This example works by creating what's known as a <strong>block formatting context</strong> (BFC). This is like a mini layout inside your page, inside of which everything is contained. This means our floated element is contained inside the BFC, and the background runs behind both items. This will usually work; however, in certain cases you might find unwanted scrollbars or clipped shadows due to unintended consequences of using overflow.</p>
 
@@ -456,11 +405,7 @@ tags:
   display: flow-root;
 }</pre>
 
-<div id="Float_7">
-<div class="hidden">
-<h6 id="Float_Example_7">Float Example 7</h6>
-
-<pre class="brush: html">&lt;h1&gt;Simple float example&lt;/h1&gt;
+<pre class="brush: html hidden">&lt;h1&gt;Simple float example&lt;/h1&gt;
 &lt;div class="wrapper"&gt;
   &lt;div class="box"&gt;Float&lt;/div&gt;
 
@@ -470,7 +415,7 @@ tags:
 
 &lt;p&gt;Nam vulputate diam nec tempor bibendum. Donec luctus augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet dapibus ut, facilisis sed est. Nam id risus quis ante semper consectetur eget aliquam lorem. Vivamus tristique elit dolor, sed pretium metus suscipit vel. Mauris ultricies lectus sed lobortis finibus. Vivamus eu urna eget velit cursus viverra quis vestibulum sem. Aliquam tincidunt eget purus in interdum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.&lt;/p&gt;    </pre>
 
-<pre class="brush: css">body {
+<pre class="brush: css hidden">body {
   width: 90%;
   max-width: 900px;
   margin: 0 auto;
@@ -494,10 +439,8 @@ tags:
   padding: 1em;
 }
 </pre>
-</div>
-</div>
 
-<p>{{ EmbedLiveSample('Float_7', '100%', 600) }}</p>
+<p>{{ EmbedLiveSample('display_flow-root', '100%', 600) }}</p>
 
 <h2 id="Test_your_skills!">Test your skills!</h2>
 
