--- a/files/en-us/learn/css/first_steps/how_css_works/index.html
+++ b/files/en-us/learn/css/first_steps/how_css_works/index.html
@@ -78,9 +78,7 @@ tags:
 
 <p>{{EmbedLiveSample('A_real_DOM_representation', '100%', 55)}}</p>
 
-<div class="hidden">
-<pre class="brush: css">p {margin:0;}</pre>
-</div>
+<pre class="brush: css hidden">p {margin:0;}</pre>
 
 <h2 id="Applying_CSS_to_the_DOM">Applying CSS to the DOM</h2>
 
@@ -120,7 +118,6 @@ tags:
 
 <p>In the example below I have used the British English spelling for color, which makes that property invalid as it is not recognized. So my paragraph has not been colored blue. All of the other CSS have been applied however; only the invalid line is ignored.</p>
 
-<div id="Skipping_example">
 <pre class="brush: html">&lt;p&gt; I want this text to be large, bold and blue.&lt;/p&gt;</pre>
 
 <pre class="brush: css">p {
@@ -128,9 +125,8 @@ tags:
   colour: blue; /* incorrect spelling of the color property */
   font-size: 200%;
 }</pre>
-</div>
 
-<p>{{EmbedLiveSample('Skipping_example', '100%', 200)}}</p>
+<p>{{EmbedLiveSample('What_happens_if_a_browser_encounters_CSS_it_doesnt_understand', '100%', 200)}}</p>
 
 <p>This behavior is very useful. It means that you can use new CSS as an enhancement, knowing that no error will occur if it is not understood — the browser will either get the new feature or not. This enables basic fallback styling.</p>
 
